Models defined for events and participants and beginning of implementation of endpoints for events.
